<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="21dp"
        android:layout_height="17dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/textView2"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/txtData"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgVer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vermelha" />

    <TextView
        android:id="@+id/txtVermelha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txtVermelha"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/imgVer"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtCirurgico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/txtCirurgico"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/imgCirug"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtOrtopedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/txtOrtopedia"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/imgOrto"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtAmarela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txtAmarela"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/imgAmar"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txtVerde"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/ImgVerd"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtCanceladas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/txtCanceladas"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/imgCanc"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtDesaparecidas"
        android:layout_width="39dp"
        android:layout_height="22dp"
        android:layout_marginTop="100dp"
        android:text="@string/txtDesaparecidas"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/imgDsp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtDesistencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="96dp"
        android:text="@string/txtDesistencia"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toEndOf="@+id/imgDesist"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtSemclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/txtSemclass"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/imgSemcl"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <TextView
        android:id="@+id/txtAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/txtAzul"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toEndOf="@+id/imgAzul"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1000" />

    <ImageView
        android:id="@+id/imgAmar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/amarela" />

    <ImageView
        android:id="@+id/ImgVerd"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toEndOf="@+id/imgVer"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verde" />

    <ImageView
        android:id="@+id/imgSemcl"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgVer"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/semclass" />

    <ImageView
        android:id="@+id/imgCirug"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgVer"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cirurgico" />

    <ImageView
        android:id="@+id/imgOrto"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="@+id/imgCirug"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ortopedia" />

    <ImageView
        android:id="@+id/imgCanc"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="@+id/imgCirug"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/canceladas" />

    <ImageView
        android:id="@+id/imgAzul"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="184dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toEndOf="@+id/imgVer"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/azul" />

    <ImageView
        android:id="@+id/imgDsp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/imgCirug"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/desaparecidas" />

    <ImageView
        android:id="@+id/imgDesist"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.76"
        app:layout_constraintStart_toStartOf="@+id/imgCirug"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/desistencia" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="244dp" />

    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toEndOf="@+id/txtData"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

    <TextView
        android:id="@+id/txtIDD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toEndOf="@+id/txtData"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginTop="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/txtData"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="385dp"
        android:layout_height="0dp"
        android:layout_marginTop="232dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="385dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/txtDatte"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="292dp"
        android:layout_marginRight="292dp"
        android:text="10"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:text="Aug"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAnno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="316dp"
        android:layout_marginRight="316dp"
        android:text="2019"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>